--- a/node_backend/package.json
+++ b/node_backend/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "express-validator": "^7.0.1",
+    "form-data": "^4.0.5",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
