--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,8 +7,13 @@ pymongo>=4.6.0
 
 # RAG functionality dependencies
 PyPDF2>=3.0.0
+# FAISS: Install faiss-cpu for Mac/CPU, or faiss-gpu for Windows/Linux with CUDA
+# The system will auto-detect and use appropriate version
+# For Mac: pip install faiss-cpu
+# For Windows/Linux with NVIDIA GPU: pip install faiss-gpu
 faiss-cpu>=1.7.4
 numpy>=1.24.0
+psutil>=5.9.0  # System resource monitoring
 
 # Testing dependencies
 pytest>=7.4.0
